# ArSL-Recognetion

./: .gitignore  UI.py  app_gui.py  data.yaml  detect_image.py  detect_video.py  detect_webcam.py  pyproject.toml  train.py
runs/train/arsl21l/: args.yaml  results.csv
